punto2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias
Rule 2     sentencias -> sentencia PUNTO_COMA sentencias
Rule 3     sentencias -> sentencia PUNTO_COMA
Rule 4     sentencia -> crear_db
Rule 5     sentencia -> usar_db
Rule 6     sentencia -> crear_col
Rule 7     sentencia -> insertar
Rule 8     sentencia -> buscar
Rule 9     sentencia -> actualizar
Rule 10    sentencia -> eliminar
Rule 11    crear_db -> CREAR BASE ID
Rule 12    usar_db -> USAR ID
Rule 13    crear_col -> CREAR COLECCION ID
Rule 14    insertar -> INSERTAR EN ID DOCUMENTO documento
Rule 15    buscar -> BUSCAR EN ID TODO
Rule 16    buscar -> BUSCAR EN ID DONDE condiciones
Rule 17    actualizar -> ACTUALIZAR EN ID DONDE condiciones CON documento
Rule 18    eliminar -> ELIMINAR EN ID DONDE condiciones
Rule 19    documento -> LLAVE_IZQ pares LLAVE_DER
Rule 20    pares -> par COMA pares
Rule 21    pares -> par
Rule 22    par -> CADENA DOS_PUNTOS valor
Rule 23    valor -> CADENA
Rule 24    valor -> NUMERO
Rule 25    valor -> VERDADERO
Rule 26    valor -> FALSO
Rule 27    valor -> documento
Rule 28    valor -> CORCHETE_IZQ lista CORCHETE_DER
Rule 29    lista -> valor COMA lista
Rule 30    lista -> valor
Rule 31    lista -> <empty>
Rule 32    condiciones -> condicion Y condiciones
Rule 33    condiciones -> condicion O condiciones
Rule 34    condiciones -> condicion
Rule 35    condicion -> CADENA operador valor
Rule 36    operador -> IGUAL_IGUAL
Rule 37    operador -> DIFERENTE
Rule 38    operador -> MAYOR
Rule 39    operador -> MENOR
Rule 40    operador -> MAYOR_IGUAL
Rule 41    operador -> MENOR_IGUAL

Terminals, with rules where they appear

ACTUALIZAR           : 17
BASE                 : 11
BUSCAR               : 15 16
CADENA               : 22 23 35
COLECCION            : 13
COMA                 : 20 29
CON                  : 17
CORCHETE_DER         : 28
CORCHETE_IZQ         : 28
CREAR                : 11 13
DIFERENTE            : 37
DOCUMENTO            : 14
DONDE                : 16 17 18
DOS_PUNTOS           : 22
ELIMINAR             : 18
EN                   : 14 15 16 17 18
FALSO                : 26
ID                   : 11 12 13 14 15 16 17 18
IGUAL_IGUAL          : 36
INSERTAR             : 14
LLAVE_DER            : 19
LLAVE_IZQ            : 19
MAYOR                : 38
MAYOR_IGUAL          : 40
MENOR                : 39
MENOR_IGUAL          : 41
NUMERO               : 24
O                    : 33
PUNTO_COMA           : 2 3
TODO                 : 15
USAR                 : 12
VERDADERO            : 25
Y                    : 32
error                : 

Nonterminals, with rules where they appear

actualizar           : 9
buscar               : 8
condicion            : 32 33 34
condiciones          : 16 17 18 32 33
crear_col            : 6
crear_db             : 4
documento            : 14 17 27
eliminar             : 10
insertar             : 7
lista                : 28 29
operador             : 35
par                  : 20 21
pares                : 19 20
programa             : 0
sentencia            : 2 3
sentencias           : 1 2
usar_db              : 5
valor                : 22 29 30 35

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias
    (2) sentencias -> . sentencia PUNTO_COMA sentencias
    (3) sentencias -> . sentencia PUNTO_COMA
    (4) sentencia -> . crear_db
    (5) sentencia -> . usar_db
    (6) sentencia -> . crear_col
    (7) sentencia -> . insertar
    (8) sentencia -> . buscar
    (9) sentencia -> . actualizar
    (10) sentencia -> . eliminar
    (11) crear_db -> . CREAR BASE ID
    (12) usar_db -> . USAR ID
    (13) crear_col -> . CREAR COLECCION ID
    (14) insertar -> . INSERTAR EN ID DOCUMENTO documento
    (15) buscar -> . BUSCAR EN ID TODO
    (16) buscar -> . BUSCAR EN ID DONDE condiciones
    (17) actualizar -> . ACTUALIZAR EN ID DONDE condiciones CON documento
    (18) eliminar -> . ELIMINAR EN ID DONDE condiciones

    CREAR           shift and go to state 11
    USAR            shift and go to state 12
    INSERTAR        shift and go to state 13
    BUSCAR          shift and go to state 14
    ACTUALIZAR      shift and go to state 15
    ELIMINAR        shift and go to state 16

    programa                       shift and go to state 1
    sentencias                     shift and go to state 2
    sentencia                      shift and go to state 3
    crear_db                       shift and go to state 4
    usar_db                        shift and go to state 5
    crear_col                      shift and go to state 6
    insertar                       shift and go to state 7
    buscar                         shift and go to state 8
    actualizar                     shift and go to state 9
    eliminar                       shift and go to state 10

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias .

    $end            reduce using rule 1 (programa -> sentencias .)


state 3

    (2) sentencias -> sentencia . PUNTO_COMA sentencias
    (3) sentencias -> sentencia . PUNTO_COMA

    PUNTO_COMA      shift and go to state 17


state 4

    (4) sentencia -> crear_db .

    PUNTO_COMA      reduce using rule 4 (sentencia -> crear_db .)


state 5

    (5) sentencia -> usar_db .

    PUNTO_COMA      reduce using rule 5 (sentencia -> usar_db .)


state 6

    (6) sentencia -> crear_col .

    PUNTO_COMA      reduce using rule 6 (sentencia -> crear_col .)


state 7

    (7) sentencia -> insertar .

    PUNTO_COMA      reduce using rule 7 (sentencia -> insertar .)


state 8

    (8) sentencia -> buscar .

    PUNTO_COMA      reduce using rule 8 (sentencia -> buscar .)


state 9

    (9) sentencia -> actualizar .

    PUNTO_COMA      reduce using rule 9 (sentencia -> actualizar .)


state 10

    (10) sentencia -> eliminar .

    PUNTO_COMA      reduce using rule 10 (sentencia -> eliminar .)


state 11

    (11) crear_db -> CREAR . BASE ID
    (13) crear_col -> CREAR . COLECCION ID

    BASE            shift and go to state 18
    COLECCION       shift and go to state 19


state 12

    (12) usar_db -> USAR . ID

    ID              shift and go to state 20


state 13

    (14) insertar -> INSERTAR . EN ID DOCUMENTO documento

    EN              shift and go to state 21


state 14

    (15) buscar -> BUSCAR . EN ID TODO
    (16) buscar -> BUSCAR . EN ID DONDE condiciones

    EN              shift and go to state 22


state 15

    (17) actualizar -> ACTUALIZAR . EN ID DONDE condiciones CON documento

    EN              shift and go to state 23


state 16

    (18) eliminar -> ELIMINAR . EN ID DONDE condiciones

    EN              shift and go to state 24


state 17

    (2) sentencias -> sentencia PUNTO_COMA . sentencias
    (3) sentencias -> sentencia PUNTO_COMA .
    (2) sentencias -> . sentencia PUNTO_COMA sentencias
    (3) sentencias -> . sentencia PUNTO_COMA
    (4) sentencia -> . crear_db
    (5) sentencia -> . usar_db
    (6) sentencia -> . crear_col
    (7) sentencia -> . insertar
    (8) sentencia -> . buscar
    (9) sentencia -> . actualizar
    (10) sentencia -> . eliminar
    (11) crear_db -> . CREAR BASE ID
    (12) usar_db -> . USAR ID
    (13) crear_col -> . CREAR COLECCION ID
    (14) insertar -> . INSERTAR EN ID DOCUMENTO documento
    (15) buscar -> . BUSCAR EN ID TODO
    (16) buscar -> . BUSCAR EN ID DONDE condiciones
    (17) actualizar -> . ACTUALIZAR EN ID DONDE condiciones CON documento
    (18) eliminar -> . ELIMINAR EN ID DONDE condiciones

    $end            reduce using rule 3 (sentencias -> sentencia PUNTO_COMA .)
    CREAR           shift and go to state 11
    USAR            shift and go to state 12
    INSERTAR        shift and go to state 13
    BUSCAR          shift and go to state 14
    ACTUALIZAR      shift and go to state 15
    ELIMINAR        shift and go to state 16

    sentencia                      shift and go to state 3
    sentencias                     shift and go to state 25
    crear_db                       shift and go to state 4
    usar_db                        shift and go to state 5
    crear_col                      shift and go to state 6
    insertar                       shift and go to state 7
    buscar                         shift and go to state 8
    actualizar                     shift and go to state 9
    eliminar                       shift and go to state 10

state 18

    (11) crear_db -> CREAR BASE . ID

    ID              shift and go to state 26


state 19

    (13) crear_col -> CREAR COLECCION . ID

    ID              shift and go to state 27


state 20

    (12) usar_db -> USAR ID .

    PUNTO_COMA      reduce using rule 12 (usar_db -> USAR ID .)


state 21

    (14) insertar -> INSERTAR EN . ID DOCUMENTO documento

    ID              shift and go to state 28


state 22

    (15) buscar -> BUSCAR EN . ID TODO
    (16) buscar -> BUSCAR EN . ID DONDE condiciones

    ID              shift and go to state 29


state 23

    (17) actualizar -> ACTUALIZAR EN . ID DONDE condiciones CON documento

    ID              shift and go to state 30


state 24

    (18) eliminar -> ELIMINAR EN . ID DONDE condiciones

    ID              shift and go to state 31


state 25

    (2) sentencias -> sentencia PUNTO_COMA sentencias .

    $end            reduce using rule 2 (sentencias -> sentencia PUNTO_COMA sentencias .)


state 26

    (11) crear_db -> CREAR BASE ID .

    PUNTO_COMA      reduce using rule 11 (crear_db -> CREAR BASE ID .)


state 27

    (13) crear_col -> CREAR COLECCION ID .

    PUNTO_COMA      reduce using rule 13 (crear_col -> CREAR COLECCION ID .)


state 28

    (14) insertar -> INSERTAR EN ID . DOCUMENTO documento

    DOCUMENTO       shift and go to state 32


state 29

    (15) buscar -> BUSCAR EN ID . TODO
    (16) buscar -> BUSCAR EN ID . DONDE condiciones

    TODO            shift and go to state 33
    DONDE           shift and go to state 34


state 30

    (17) actualizar -> ACTUALIZAR EN ID . DONDE condiciones CON documento

    DONDE           shift and go to state 35


state 31

    (18) eliminar -> ELIMINAR EN ID . DONDE condiciones

    DONDE           shift and go to state 36


state 32

    (14) insertar -> INSERTAR EN ID DOCUMENTO . documento
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    LLAVE_IZQ       shift and go to state 38

    documento                      shift and go to state 37

state 33

    (15) buscar -> BUSCAR EN ID TODO .

    PUNTO_COMA      reduce using rule 15 (buscar -> BUSCAR EN ID TODO .)


state 34

    (16) buscar -> BUSCAR EN ID DONDE . condiciones
    (32) condiciones -> . condicion Y condiciones
    (33) condiciones -> . condicion O condiciones
    (34) condiciones -> . condicion
    (35) condicion -> . CADENA operador valor

    CADENA          shift and go to state 41

    condiciones                    shift and go to state 39
    condicion                      shift and go to state 40

state 35

    (17) actualizar -> ACTUALIZAR EN ID DONDE . condiciones CON documento
    (32) condiciones -> . condicion Y condiciones
    (33) condiciones -> . condicion O condiciones
    (34) condiciones -> . condicion
    (35) condicion -> . CADENA operador valor

    CADENA          shift and go to state 41

    condiciones                    shift and go to state 42
    condicion                      shift and go to state 40

state 36

    (18) eliminar -> ELIMINAR EN ID DONDE . condiciones
    (32) condiciones -> . condicion Y condiciones
    (33) condiciones -> . condicion O condiciones
    (34) condiciones -> . condicion
    (35) condicion -> . CADENA operador valor

    CADENA          shift and go to state 41

    condiciones                    shift and go to state 43
    condicion                      shift and go to state 40

state 37

    (14) insertar -> INSERTAR EN ID DOCUMENTO documento .

    PUNTO_COMA      reduce using rule 14 (insertar -> INSERTAR EN ID DOCUMENTO documento .)


state 38

    (19) documento -> LLAVE_IZQ . pares LLAVE_DER
    (20) pares -> . par COMA pares
    (21) pares -> . par
    (22) par -> . CADENA DOS_PUNTOS valor

    CADENA          shift and go to state 46

    pares                          shift and go to state 44
    par                            shift and go to state 45

state 39

    (16) buscar -> BUSCAR EN ID DONDE condiciones .

    PUNTO_COMA      reduce using rule 16 (buscar -> BUSCAR EN ID DONDE condiciones .)


state 40

    (32) condiciones -> condicion . Y condiciones
    (33) condiciones -> condicion . O condiciones
    (34) condiciones -> condicion .

    Y               shift and go to state 47
    O               shift and go to state 48
    PUNTO_COMA      reduce using rule 34 (condiciones -> condicion .)
    CON             reduce using rule 34 (condiciones -> condicion .)


state 41

    (35) condicion -> CADENA . operador valor
    (36) operador -> . IGUAL_IGUAL
    (37) operador -> . DIFERENTE
    (38) operador -> . MAYOR
    (39) operador -> . MENOR
    (40) operador -> . MAYOR_IGUAL
    (41) operador -> . MENOR_IGUAL

    IGUAL_IGUAL     shift and go to state 50
    DIFERENTE       shift and go to state 51
    MAYOR           shift and go to state 52
    MENOR           shift and go to state 53
    MAYOR_IGUAL     shift and go to state 54
    MENOR_IGUAL     shift and go to state 55

    operador                       shift and go to state 49

state 42

    (17) actualizar -> ACTUALIZAR EN ID DONDE condiciones . CON documento

    CON             shift and go to state 56


state 43

    (18) eliminar -> ELIMINAR EN ID DONDE condiciones .

    PUNTO_COMA      reduce using rule 18 (eliminar -> ELIMINAR EN ID DONDE condiciones .)


state 44

    (19) documento -> LLAVE_IZQ pares . LLAVE_DER

    LLAVE_DER       shift and go to state 57


state 45

    (20) pares -> par . COMA pares
    (21) pares -> par .

    COMA            shift and go to state 58
    LLAVE_DER       reduce using rule 21 (pares -> par .)


state 46

    (22) par -> CADENA . DOS_PUNTOS valor

    DOS_PUNTOS      shift and go to state 59


state 47

    (32) condiciones -> condicion Y . condiciones
    (32) condiciones -> . condicion Y condiciones
    (33) condiciones -> . condicion O condiciones
    (34) condiciones -> . condicion
    (35) condicion -> . CADENA operador valor

    CADENA          shift and go to state 41

    condicion                      shift and go to state 40
    condiciones                    shift and go to state 60

state 48

    (33) condiciones -> condicion O . condiciones
    (32) condiciones -> . condicion Y condiciones
    (33) condiciones -> . condicion O condiciones
    (34) condiciones -> . condicion
    (35) condicion -> . CADENA operador valor

    CADENA          shift and go to state 41

    condicion                      shift and go to state 40
    condiciones                    shift and go to state 61

state 49

    (35) condicion -> CADENA operador . valor
    (23) valor -> . CADENA
    (24) valor -> . NUMERO
    (25) valor -> . VERDADERO
    (26) valor -> . FALSO
    (27) valor -> . documento
    (28) valor -> . CORCHETE_IZQ lista CORCHETE_DER
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    CADENA          shift and go to state 62
    NUMERO          shift and go to state 64
    VERDADERO       shift and go to state 65
    FALSO           shift and go to state 66
    CORCHETE_IZQ    shift and go to state 68
    LLAVE_IZQ       shift and go to state 38

    valor                          shift and go to state 63
    documento                      shift and go to state 67

state 50

    (36) operador -> IGUAL_IGUAL .

    CADENA          reduce using rule 36 (operador -> IGUAL_IGUAL .)
    NUMERO          reduce using rule 36 (operador -> IGUAL_IGUAL .)
    VERDADERO       reduce using rule 36 (operador -> IGUAL_IGUAL .)
    FALSO           reduce using rule 36 (operador -> IGUAL_IGUAL .)
    CORCHETE_IZQ    reduce using rule 36 (operador -> IGUAL_IGUAL .)
    LLAVE_IZQ       reduce using rule 36 (operador -> IGUAL_IGUAL .)


state 51

    (37) operador -> DIFERENTE .

    CADENA          reduce using rule 37 (operador -> DIFERENTE .)
    NUMERO          reduce using rule 37 (operador -> DIFERENTE .)
    VERDADERO       reduce using rule 37 (operador -> DIFERENTE .)
    FALSO           reduce using rule 37 (operador -> DIFERENTE .)
    CORCHETE_IZQ    reduce using rule 37 (operador -> DIFERENTE .)
    LLAVE_IZQ       reduce using rule 37 (operador -> DIFERENTE .)


state 52

    (38) operador -> MAYOR .

    CADENA          reduce using rule 38 (operador -> MAYOR .)
    NUMERO          reduce using rule 38 (operador -> MAYOR .)
    VERDADERO       reduce using rule 38 (operador -> MAYOR .)
    FALSO           reduce using rule 38 (operador -> MAYOR .)
    CORCHETE_IZQ    reduce using rule 38 (operador -> MAYOR .)
    LLAVE_IZQ       reduce using rule 38 (operador -> MAYOR .)


state 53

    (39) operador -> MENOR .

    CADENA          reduce using rule 39 (operador -> MENOR .)
    NUMERO          reduce using rule 39 (operador -> MENOR .)
    VERDADERO       reduce using rule 39 (operador -> MENOR .)
    FALSO           reduce using rule 39 (operador -> MENOR .)
    CORCHETE_IZQ    reduce using rule 39 (operador -> MENOR .)
    LLAVE_IZQ       reduce using rule 39 (operador -> MENOR .)


state 54

    (40) operador -> MAYOR_IGUAL .

    CADENA          reduce using rule 40 (operador -> MAYOR_IGUAL .)
    NUMERO          reduce using rule 40 (operador -> MAYOR_IGUAL .)
    VERDADERO       reduce using rule 40 (operador -> MAYOR_IGUAL .)
    FALSO           reduce using rule 40 (operador -> MAYOR_IGUAL .)
    CORCHETE_IZQ    reduce using rule 40 (operador -> MAYOR_IGUAL .)
    LLAVE_IZQ       reduce using rule 40 (operador -> MAYOR_IGUAL .)


state 55

    (41) operador -> MENOR_IGUAL .

    CADENA          reduce using rule 41 (operador -> MENOR_IGUAL .)
    NUMERO          reduce using rule 41 (operador -> MENOR_IGUAL .)
    VERDADERO       reduce using rule 41 (operador -> MENOR_IGUAL .)
    FALSO           reduce using rule 41 (operador -> MENOR_IGUAL .)
    CORCHETE_IZQ    reduce using rule 41 (operador -> MENOR_IGUAL .)
    LLAVE_IZQ       reduce using rule 41 (operador -> MENOR_IGUAL .)


state 56

    (17) actualizar -> ACTUALIZAR EN ID DONDE condiciones CON . documento
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    LLAVE_IZQ       shift and go to state 38

    documento                      shift and go to state 69

state 57

    (19) documento -> LLAVE_IZQ pares LLAVE_DER .

    PUNTO_COMA      reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    Y               reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    O               reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    CON             reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    COMA            reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    LLAVE_DER       reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)
    CORCHETE_DER    reduce using rule 19 (documento -> LLAVE_IZQ pares LLAVE_DER .)


state 58

    (20) pares -> par COMA . pares
    (20) pares -> . par COMA pares
    (21) pares -> . par
    (22) par -> . CADENA DOS_PUNTOS valor

    CADENA          shift and go to state 46

    par                            shift and go to state 45
    pares                          shift and go to state 70

state 59

    (22) par -> CADENA DOS_PUNTOS . valor
    (23) valor -> . CADENA
    (24) valor -> . NUMERO
    (25) valor -> . VERDADERO
    (26) valor -> . FALSO
    (27) valor -> . documento
    (28) valor -> . CORCHETE_IZQ lista CORCHETE_DER
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    CADENA          shift and go to state 62
    NUMERO          shift and go to state 64
    VERDADERO       shift and go to state 65
    FALSO           shift and go to state 66
    CORCHETE_IZQ    shift and go to state 68
    LLAVE_IZQ       shift and go to state 38

    valor                          shift and go to state 71
    documento                      shift and go to state 67

state 60

    (32) condiciones -> condicion Y condiciones .

    PUNTO_COMA      reduce using rule 32 (condiciones -> condicion Y condiciones .)
    CON             reduce using rule 32 (condiciones -> condicion Y condiciones .)


state 61

    (33) condiciones -> condicion O condiciones .

    PUNTO_COMA      reduce using rule 33 (condiciones -> condicion O condiciones .)
    CON             reduce using rule 33 (condiciones -> condicion O condiciones .)


state 62

    (23) valor -> CADENA .

    Y               reduce using rule 23 (valor -> CADENA .)
    O               reduce using rule 23 (valor -> CADENA .)
    PUNTO_COMA      reduce using rule 23 (valor -> CADENA .)
    CON             reduce using rule 23 (valor -> CADENA .)
    COMA            reduce using rule 23 (valor -> CADENA .)
    LLAVE_DER       reduce using rule 23 (valor -> CADENA .)
    CORCHETE_DER    reduce using rule 23 (valor -> CADENA .)


state 63

    (35) condicion -> CADENA operador valor .

    Y               reduce using rule 35 (condicion -> CADENA operador valor .)
    O               reduce using rule 35 (condicion -> CADENA operador valor .)
    PUNTO_COMA      reduce using rule 35 (condicion -> CADENA operador valor .)
    CON             reduce using rule 35 (condicion -> CADENA operador valor .)


state 64

    (24) valor -> NUMERO .

    Y               reduce using rule 24 (valor -> NUMERO .)
    O               reduce using rule 24 (valor -> NUMERO .)
    PUNTO_COMA      reduce using rule 24 (valor -> NUMERO .)
    CON             reduce using rule 24 (valor -> NUMERO .)
    COMA            reduce using rule 24 (valor -> NUMERO .)
    LLAVE_DER       reduce using rule 24 (valor -> NUMERO .)
    CORCHETE_DER    reduce using rule 24 (valor -> NUMERO .)


state 65

    (25) valor -> VERDADERO .

    Y               reduce using rule 25 (valor -> VERDADERO .)
    O               reduce using rule 25 (valor -> VERDADERO .)
    PUNTO_COMA      reduce using rule 25 (valor -> VERDADERO .)
    CON             reduce using rule 25 (valor -> VERDADERO .)
    COMA            reduce using rule 25 (valor -> VERDADERO .)
    LLAVE_DER       reduce using rule 25 (valor -> VERDADERO .)
    CORCHETE_DER    reduce using rule 25 (valor -> VERDADERO .)


state 66

    (26) valor -> FALSO .

    Y               reduce using rule 26 (valor -> FALSO .)
    O               reduce using rule 26 (valor -> FALSO .)
    PUNTO_COMA      reduce using rule 26 (valor -> FALSO .)
    CON             reduce using rule 26 (valor -> FALSO .)
    COMA            reduce using rule 26 (valor -> FALSO .)
    LLAVE_DER       reduce using rule 26 (valor -> FALSO .)
    CORCHETE_DER    reduce using rule 26 (valor -> FALSO .)


state 67

    (27) valor -> documento .

    Y               reduce using rule 27 (valor -> documento .)
    O               reduce using rule 27 (valor -> documento .)
    PUNTO_COMA      reduce using rule 27 (valor -> documento .)
    CON             reduce using rule 27 (valor -> documento .)
    COMA            reduce using rule 27 (valor -> documento .)
    LLAVE_DER       reduce using rule 27 (valor -> documento .)
    CORCHETE_DER    reduce using rule 27 (valor -> documento .)


state 68

    (28) valor -> CORCHETE_IZQ . lista CORCHETE_DER
    (29) lista -> . valor COMA lista
    (30) lista -> . valor
    (31) lista -> .
    (23) valor -> . CADENA
    (24) valor -> . NUMERO
    (25) valor -> . VERDADERO
    (26) valor -> . FALSO
    (27) valor -> . documento
    (28) valor -> . CORCHETE_IZQ lista CORCHETE_DER
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    CORCHETE_DER    reduce using rule 31 (lista -> .)
    CADENA          shift and go to state 62
    NUMERO          shift and go to state 64
    VERDADERO       shift and go to state 65
    FALSO           shift and go to state 66
    CORCHETE_IZQ    shift and go to state 68
    LLAVE_IZQ       shift and go to state 38

    lista                          shift and go to state 72
    valor                          shift and go to state 73
    documento                      shift and go to state 67

state 69

    (17) actualizar -> ACTUALIZAR EN ID DONDE condiciones CON documento .

    PUNTO_COMA      reduce using rule 17 (actualizar -> ACTUALIZAR EN ID DONDE condiciones CON documento .)


state 70

    (20) pares -> par COMA pares .

    LLAVE_DER       reduce using rule 20 (pares -> par COMA pares .)


state 71

    (22) par -> CADENA DOS_PUNTOS valor .

    COMA            reduce using rule 22 (par -> CADENA DOS_PUNTOS valor .)
    LLAVE_DER       reduce using rule 22 (par -> CADENA DOS_PUNTOS valor .)


state 72

    (28) valor -> CORCHETE_IZQ lista . CORCHETE_DER

    CORCHETE_DER    shift and go to state 74


state 73

    (29) lista -> valor . COMA lista
    (30) lista -> valor .

    COMA            shift and go to state 75
    CORCHETE_DER    reduce using rule 30 (lista -> valor .)


state 74

    (28) valor -> CORCHETE_IZQ lista CORCHETE_DER .

    Y               reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    O               reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    PUNTO_COMA      reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    CON             reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    COMA            reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    LLAVE_DER       reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)
    CORCHETE_DER    reduce using rule 28 (valor -> CORCHETE_IZQ lista CORCHETE_DER .)


state 75

    (29) lista -> valor COMA . lista
    (29) lista -> . valor COMA lista
    (30) lista -> . valor
    (31) lista -> .
    (23) valor -> . CADENA
    (24) valor -> . NUMERO
    (25) valor -> . VERDADERO
    (26) valor -> . FALSO
    (27) valor -> . documento
    (28) valor -> . CORCHETE_IZQ lista CORCHETE_DER
    (19) documento -> . LLAVE_IZQ pares LLAVE_DER

    CORCHETE_DER    reduce using rule 31 (lista -> .)
    CADENA          shift and go to state 62
    NUMERO          shift and go to state 64
    VERDADERO       shift and go to state 65
    FALSO           shift and go to state 66
    CORCHETE_IZQ    shift and go to state 68
    LLAVE_IZQ       shift and go to state 38

    valor                          shift and go to state 73
    lista                          shift and go to state 76
    documento                      shift and go to state 67

state 76

    (29) lista -> valor COMA lista .

    CORCHETE_DER    reduce using rule 29 (lista -> valor COMA lista .)

